# libkson

./: .gitignore  CMakeLists.txt  LICENSE  README.md  kson.sln  kson.vcxproj  kson.vcxproj.filters
include/kson/: ChartData.hpp  Error.hpp  chart_data.hpp  error.hpp  kson.hpp
include/kson/Audio/: AudioEffect.hpp  AudioInfo.hpp  BGMInfo.hpp  KeySound.hpp
include/kson/BG/: BGInfo.hpp
include/kson/Beat/: BeatInfo.hpp  TimeSig.hpp
include/kson/Camera/: Cam.hpp  CameraInfo.hpp  Tilt.hpp
include/kson/Common/: Common.hpp
include/kson/Compat/: CompatInfo.hpp
include/kson/Editor/: EditorInfo.hpp
include/kson/Encoding/: Encoding.hpp
include/kson/Gauge/: GaugeInfo.hpp
include/kson/IO/: IDiag.hpp  KshIO.hpp  KshLoadingDiag.hpp  KshParserDiag.hpp  KshSavingDiag.hpp  KsonIO.hpp  KsonLoadingDiag.hpp  KsonParserDiag.hpp  WarningScope.hpp
include/kson/Meta/: MetaInfo.hpp
include/kson/Note/: NoteInfo.hpp
include/kson/Util/: GraphCurve.hpp  GraphUtils.hpp  TiltUtils.hpp  TimingUtils.hpp
include/kson/audio/: audio_effect.hpp  audio_info.hpp  bgm_info.hpp  key_sound.hpp
include/kson/beat/: beat_info.hpp  time_sig.hpp
include/kson/bg/: bg_info.hpp
include/kson/camera/: cam.hpp  camera_info.hpp  tilt.hpp
include/kson/common/: common.hpp
include/kson/compat/: compat_info.hpp
include/kson/editor/: editor_info.hpp
include/kson/encoding/: encoding.hpp
include/kson/gauge/: gauge_info.hpp
include/kson/io/: ksh_io.hpp  kson_io.hpp
include/kson/meta/: meta_info.hpp
include/kson/note/: note_info.hpp
include/kson/util/: graph_curve.hpp  graph_utils.hpp  tilt_utils.hpp  timing_utils.hpp
modules/: Audio.cppm  BG.cppm  Beat.cppm  CMakeLists.txt  Camera.cppm  Common.cppm  Compat.cppm  Editor.cppm  Encoding.cppm  Gauge.cppm  IO.cppm  Meta.cppm  Note.cppm  Util.cppm  kson.cppm
src/: ChartData.cpp  Error.cpp  error.cpp
src/Audio/: AudioEffect.cpp  BGMInfo.cpp
src/Camera/: Tilt.cpp
src/Compat/: CompatInfo.cpp
src/Encoding/: EncodingIconv.cpp  EncodingWin.cpp
src/IO/: KshIOIn.cpp  KshIOOut.cpp  KsonIO.cpp
src/Util/: GraphCurve.cpp  GraphUtils.cpp  TiltUtils.cpp  TimingUtils.cpp
src/audio/: audio_effect.cpp  bgm_info.cpp
src/camera/: tilt.cpp
src/compat/: compat_info.cpp
src/encoding/: encoding_iconv.cpp  encoding_win.cpp
src/io/: ksh_io.cpp  ksh_io_in.cpp  ksh_io_out.cpp  kson_io.cpp
src/util/: graph_curve.cpp  graph_utils.cpp  tilt_utils.cpp  timing_utils.cpp
tests/: CMakeLists.txt  Main.cpp  TestBasic.cpp  TestKshIO.cpp  TestKshSavingDiag.cpp  TestKsonIO.cpp  TestStop.cpp
tests/assets/: Gram_ex.kson
tool/: generate_ksh2kson_version.bat  ksh2kson.cpp  ksh2kson.vcxproj  ksh2kson.vcxproj.filters  ksh2kson_version.h.in  kson2ksh.cpp
